# cofree-bot

./: .gitignore  .hlint.yaml  .pre-commit-config.yaml  Justfile  Makefile  README.md  ROADMAP.md  brittany.yaml  cabal.project  cofree-bot.cabal  deploy.sh  docker-compose.yaml  docker.nix  flake.nix  hie.yaml  overlay.nix  stack.yaml  static.nix
.github/workflows/: cabal.yml  deploy.yml  haskell.yml  nix.yml
app/: Main.hs  OptionsParser.hs
app/Options/: Config.hs  Types.hs
chat-bots/: chat-bots.cabal
chat-bots-contrib/: chat-bots-contrib.cabal
chat-bots-contrib/src/: TwoBot.hs
chat-bots-contrib/src/Data/Chat/Bot/: Calculator.hs  CoinFlip.hs  GHCI.hs  Hello.hs  Jitsi.hs  Lists.hs  Magic8Ball.hs  Quote.hs  Updog.hs
chat-bots-contrib/src/Data/Chat/Bot/Calculator/: Language.hs
chat-bots-contrib/src/Data/Chat/Bot/Jitsi/: Dictionary.hs
chat-bots-contrib/src/Data/Chat/Server/: Matrix.hs
chat-bots-contrib/test/: Scripts.hs  Spec.hs  TestServer.hs
chat-bots-contrib/test/Data/Chat/Bot/: CalculatorSpec.hs  ContextSpec.hs  HelloSpec.hs  QuoteSpec.hs  UpdogSpec.hs
chat-bots/src/Control/Monad/: ListT.hs
chat-bots/src/Data/: Align2.hs
chat-bots/src/Data/Bifunctor/: Const2.hs  HKD.hs
chat-bots/src/Data/Chat/: Bot.hs  Server.hs  Utils.hs
chat-bots/src/Data/Chat/Bot/: Context.hs  HKD.hs  Monoidal.hs  Serialization.hs
chat-bots/src/Data/Chat/Server/: Repl.hs
chat-bots/src/Data/Functor/: HKD.hs
chat-bots/src/Data/Trifunctor/: Barbie.hs
chat-bots/test/: Spec.hs
cofree-bot/: cofree-bot.cabal
cofree-bot/app/: Main.hs
cofree-bot/app/Options/: Config.hs  Env.hs  Types.hs
cofree-bot/src/: Options.hs
cofree-bot/src/Options/: Config.hs  Env.hs  Parser.hs  Types.hs
cofree-bot/test/: Spec.hs
list-t/: list-t.cabal
list-t/test/: Spec.hs
machines-coalgebras/: machines-coalgebras.cabal
machines-coalgebras/src/Data/: Machine.hs
machines-coalgebras/src/Data/Machine/: Mealy.hs  Moore.hs
machines-coalgebras/src/Data/Machine/Mealy/: Coalgebra.hs
machines-coalgebras/src/Data/Machine/Mealy/Coalgebra/: Monoidal.hs
machines-coalgebras/src/Data/Machine/Moore/: Coalgebra.hs
machines-coalgebras/src/Data/Machine/Moore/Coalgebra/: Monoidal.hs
nix/: docker.nix  repl-containers.nix  scripts.nix
src/: CofreeBot.hs  Parsing.hs
src/CofreeBot/: Bot.hs  Events.hs  MessagingAPI.hs  Plugins.hs  Server.hs  Session.hs  Utils.hs
src/CofreeBot/Bot/: Behaviors.hs  Calculator.hs  CoinFlip.hs  Context.hs  GHCI.hs  Hello.hs  Matrix.hs  Simple.hs
src/CofreeBot/Bot/Behaviors/: Admin.hs  Calculator.hs  CoinFlip.hs  GHCI.hs  Hello.hs  Jitsi.hs  Ligma.hs  Magic8Ball.hs  OpenAI.hs  Repl.hs  Updog.hs
src/CofreeBot/Bot/Behaviors/Calculator/: Language.hs
src/CofreeBot/Bot/Behaviors/Jitsi/: Dictionary.hs
src/CofreeBot/Bot/Behaviors/Repl/: GHCI.hs  MitScheme.hs  Node.hs  Python.hs  SBCL.hs  Util.hs
src/CofreeBot/Bot/Calculator/: Language.hs
src/CofreeBot/Bot/GHCI/: Interpreter.hs
src/CofreeBot/Bot/Harness/: Matrix.hs  Repl.hs
src/CofreeBot/Plugins/: Calculator.hs
src/CofreeBot/Plugins/Calculator/: Language.hs
src/CofreeBot/Server/: Matrix.hs  Repl.hs  Type.hs
src/CofreeBot/Utils/: ListT.hs
src/Network/Matrix/Client/: Lens.hs
test/: Scripts.hs  Spec.hs  TestServer.hs
test/transcripts/: helloBot.transcript
