cabal-version:      3.0
name:               cofree-bot
version:            0.1.0.0
synopsis:           A chat bot for cofree.coffee
bug-reports:        http://www.github.com/ssbothwell/cofree-bot
license:            MIT
author:             Solomon and Asad
maintainer:         ssbothwell@gmail.com
category:           matrix, bot

common common-settings
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules

common common-libraries
  build-depends:
    , base >= 2 && < 5
    , matrix-client
    , network-uri
    , text

executable cofree-bot
  import:
    , common-libraries
    , common-settings
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      cofree-bot
    , optparse-applicative
  other-modules:
    OptionsParser

library
  import:
    , common-libraries
    , common-settings
  hs-source-dirs: src
  exposed-modules:
      CofreeBot
    , CofreeBot.Bot
    , CofreeBot.Bot.Calculator
    , CofreeBot.Bot.Calculator.Language
    , CofreeBot.Bot.Context
    , CofreeBot.Bot.Hello
    , CofreeBot.Bot.Matrix
    , CofreeBot.Bot.Simple
    , CofreeBot.Session
    , CofreeBot.Utils
    , Network.Matrix.Client.Lens
  build-depends:
    , aeson
    , attoparsec
    , containers
    , lens
    , mtl
    , pretty-simple
    , profunctors
    , random