cabal-version: 3.0
name:          cofree-bot
version:       0.1.0.0
synopsis:      A chat bot for cofree.coffee
bug-reports:   http://www.github.com/ssbothwell/cofree-bot
license:       MIT
author:        Solomon and Asad
maintainer:    ssbothwell@gmail.com
category:      matrix, bot

common common-settings
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall -Wcpp-undef -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields
    -Werror=missing-home-modules

common common-libraries
  build-depends:
    , base           >=2 && <5
    , bytestring
    , matrix-client
    , network-uri
    , profunctors
    , text
    , typed-process

executable cofree-bot
  import:
    , common-libraries
    , common-settings

  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , cofree-bot
    , optparse-applicative
    , xdg-basedir

  other-modules:  OptionsParser

library
  import:
    , common-libraries
    , common-settings

  hs-source-dirs:  src
  exposed-modules:
    CofreeBot
    CofreeBot.Bot
    CofreeBot.Bot.Behaviors
    CofreeBot.Bot.Behaviors.Admin
    CofreeBot.Bot.Behaviors.Calculator
    CofreeBot.Bot.Behaviors.Calculator.Language
    CofreeBot.Bot.Behaviors.CoinFlip
    CofreeBot.Bot.Behaviors.GHCI
    CofreeBot.Bot.Behaviors.Hello
    CofreeBot.Bot.Behaviors.Jitsi
    CofreeBot.Bot.Behaviors.Jitsi.Dictionary
    CofreeBot.Bot.Behaviors.Magic8Ball
    CofreeBot.Bot.Behaviors.Updog
    CofreeBot.Bot.Context
    CofreeBot.Bot.Harness.Matrix
    CofreeBot.Bot.Harness.Repl
    CofreeBot.MessagingAPI
    CofreeBot.Utils
    CofreeBot.Utils.ListT

  build-depends:
    , aeson
    , attoparsec
    , containers
    , directory
    , hint
    , http-client
    , lens
    , monad-loops
    , mtl
    , pretty-simple
    , process
    , random
    , vector
