cabal-version: 3.0
name:          chat-bots
version:       0.1.0.0
synopsis:      A library for building bots compositionally. 
bug-reports:   https://github.com/cofree-coffee/cofree-bot
license:       MIT
author:        Solomon, Asad, and the Cofree-Coffee community
maintainer:    ssbothwell@gmail.com
category:      bot, chat-bot, finite-state-machines, matrix

--------------------------------------------------------------------------------

common common-settings
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-name-shadowing

--------------------------------------------------------------------------------

common common-libraries
  build-depends:
    , base           >=4.17 && <5
    , bytestring
    , list-t
    , machines-coalgebras
    , matrix-client
    , monoidal-functors
    , network-uri
    , profunctors
    , semialign
    , text
    , these
    , typed-process

--------------------------------------------------------------------------------

library
  import:
    , common-libraries
    , common-settings

  hs-source-dirs:  src
  exposed-modules:
    Data.Chat.Bot
    Data.Chat.Bot.HKD
    Data.Chat.Bot.Monoidal
    Data.Chat.Bot.Context
    Data.Chat.Bot.Serialization
    Data.Chat.Server
    Data.Chat.Server.Repl
    Data.Chat.Utils

  build-depends:
    , aeson
    , attoparsec
    , containers
    , data-fix
    , directory
    , filepath
    , hint
    , http-client
    , lens
    , monad-loops
    , mtl
    , pretty-simple
    , process
    , random
    , transformers
    , vector

--------------------------------------------------------------------------------

test-suite chat-bot-tests
  import:
    , common-settings

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends:
    , base           >=4.17 && <5
    , chat-bots
    , hedgehog
    , hedgehog-classes
    , hspec
    , hspec-core
    , hspec-hedgehog
    , text
