cabal-version: 3.0
name:          list-t
version:       0.1.0.0
synopsis:      ListT Done Right
bug-reports:   https://github.com/cofree-coffee/cofree-bot
license:       MIT
author:        Solomon, Asad, and the Cofree-Coffee community
maintainer:    ssbothwell@gmail.com
category:      ListT, streaming, monads

--------------------------------------------------------------------------------

common common-settings
  default-language:   Haskell2010
  default-extensions:
    DeriveFunctor
    DerivingVia
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    TypeApplications

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-name-shadowing

--------------------------------------------------------------------------------

common common-libraries
  build-depends:
    , base           >=4.9 && <5
    , monoidal-functors
    , semialign
    , these

--------------------------------------------------------------------------------

library
  import:
    , common-libraries
    , common-settings

  hs-source-dirs:  src
  exposed-modules:
    Control.Monad.ListT

  build-depends:
    , mtl
    , transformers

--------------------------------------------------------------------------------

test-suite list-t-tests
  import:
    , common-settings

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends:
    , base           >=2 && <5
    , list-t
    , hedgehog
    , hedgehog-classes
    , hspec
    , hspec-core
    , hspec-hedgehog
    , text
